--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,9 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Token": {
-    "Issuer": "www.y5tech.com",
-    "Audience": "www.y5tech.com",
-    "SecurityKey": "doldur be meyhaneci, boş kalmasın kadehim ..."
+  "jwt": {
+    "key" : "2af4ff57-4ca0-4b3a-804b-178ad27aaf88",
+    "issuer": "aspnet-core-react-template"
   }
 }
