--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:server": "cd src/server/Api && dotnet watch run",
     "start:client": "cd src/client && npm start",
     "preinstall": "cd src/client && npm install",
-    "build": "cd src/client && npm build"
+    "build": "cd src/client && npm run build"
   },
   "repository": {
     "type": "git",
