--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "antd": "^4.10.2",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-media-hook2": "^1.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1"
