--- a/src/server/Api/appsettings.json
+++ b/src/server/Api/appsettings.json
@@ -6,10 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Token": {
-    "Issuer": "www.y5tech.com",
-    "Audience": "www.y5tech.com",
-    "SecurityKey": "doldur be meyhaneci, boş kalmasın kadehim ..."
-  }
+  "AllowedHosts": "*"
 }
