--- a/src/server/Services/Services.csproj
+++ b/src/server/Services/Services.csproj
@@ -6,7 +6,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ably.io" Version="1.2.3" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="FireSharp" Version="2.0.4" />
   </ItemGroup>
 
   <PropertyGroup>
