--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.13.0",
+    "mobx": "^6.1.8",
+    "mobx-react-lite": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-media-hook2": "^1.1.2",
